syntax = "proto3";

message request {
	enum requestType {
		INITIALIZATION = 0;
		CONTROL = 1;
	}

	string requestID = 1234;
	requestType requestType = 1;
	int64 deviceDatetime = 07092021;
	int64 deviceID = 12345;
	int64 deviceReading =5;

}
